Protobuf: Remove protobuf globals patch

The mir project has been cancelled [1], so Chromium will never need
to support it.

libmirclient has previously interfered with developer builds [2],
leading to a complex hack [3] that placed all global variables in
libprotobuf-lite into their own shared library.

This CL adds a libmirclient.so.9 stub on Linux component builds.
The library will get loaded, but its symbols will never be used by
Chromium directly, or through GDK since only the X11 backend (and
wayland in the future) is whitelisted [4].

[1] https://arstechnica.com/information-technology/2017/04/ubuntu-unity-is-dead-desktop-will-switch-back-to-gnome-next-year/
[2] https://crbug.com/700120
[3] https://codereview.chromium.org/2756543002/
[4] https://cs.chromium.org/chromium/src/chrome/browser/ui/libgtkui/gtk_ui.cc?rcl=50612fa00dfc8e79fe5bc92e2f235eee645739e9&l=434

R=pkasting@chromium.org
BUG=700120

Review-Url: https://codereview.chromium.org/2885223002
Cr-Commit-Position: refs/heads/master@{#473382}